# actuation-demo-glenn

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  autoware_depends.repos  build.sh  cyclonedds.xml
Dockerfiles/: Dockerfile
TrajectoryEvaluator/: CMakeLists.txt  prj_net.conf
TrajectoryEvaluator/include/: TrajectoryEvaluator.hpp
TrajectoryEvaluator/src/: TrajectoryEvaluator.cpp  communication.cpp
actuation_packages/: instruction.txt
actuation_packages/actuation_demos/: CMakeLists.txt  package.xml
actuation_packages/actuation_demos/launch/: autoware.launch.xml  control.launch.py  planning_simulator.launch.xml  tier4_control_component.launch.xml
actuation_packages/actuation_format_bag/: CMakeLists.txt  README.md  package.xml
actuation_packages/actuation_format_bag/src/: actuation_format_bag.cpp
actuation_packages/actuation_message_converter/: CMakeLists.txt  package.xml
actuation_packages/actuation_message_converter/include/actuation_message_converter/: actuation_message_converter_node.hpp  visibility_control.hpp
actuation_packages/actuation_message_converter/launch/: actuation_message_converter.launch.py
actuation_packages/actuation_message_converter/src/: actuation_message_converter_node.cpp
actuation_packages/actuation_message_converter/test/: test_actuation_message_converter.cpp
actuation_packages/actuation_msgs/: CMakeLists.txt  package.xml
actuation_packages/actuation_msgs/msg/: board_input_data.idl  board_output_data.idl  cartesian_sample.idl  curvilinear_sample.idl
actuation_packages/actuation_player/: CMakeLists.txt  package.xml
actuation_packages/actuation_player/data/: KinematicState.csv  cyclonedds.xml
actuation_packages/actuation_player/data/test_data/: KinematicState.csv  Trajectory.csv
actuation_packages/actuation_player/include/actuation_player/: actuation_player.hpp
actuation_packages/actuation_player/src/: actuation_player.cpp  actuation_player_main.cpp
actuation_packages/actuation_player/test/: test_actuation_player.cpp
debug/: CMakeLists.txt  subscriber.cpp
debug/msg/: board_output_data.c  board_output_data.h
documentation/: changelog.rst  conf.py  index.rst  overview.rst  requirements.txt
packet_analyzer/: pyproject.toml
packet_analyzer/analyzer_helper/: analyzer_client.py  control_commands.py
packet_analyzer/packet_analyzer/: start_analyzer.py  test_packet_analyzer.py
packet_analyzer/packet_analyzer/data/: ControlCommand.csv
packet_analyzer/packet_analyzer/data/test_data/: ControlCommand.csv
zephyr_app/: CMakeLists.txt  prj_actuation.conf
zephyr_app/src/: file.c  pure_pursuit_node_main.cpp
zephyr_app/src/autoware_auto_common/: CMakeLists.txt  package.xml
zephyr_app/src/autoware_auto_common/include/common/: filesystem.hpp  type_traits.hpp  types.hpp  visibility_control.hpp
zephyr_app/src/autoware_auto_common/include/helper_functions/: angle_utils.hpp  bool_comparisons.hpp  byte_reader.hpp  crtp.hpp  float_comparisons.hpp  mahalanobis_distance.hpp  message_adapters.hpp  template_utils.hpp  type_name.hpp
zephyr_app/src/autoware_auto_geometry/: CMakeLists.txt  package.xml
zephyr_app/src/autoware_auto_geometry/include/geometry/: bounding_box_2d.hpp  common_2d.hpp  common_3d.hpp  convex_hull.hpp  hull_pockets.hpp  intersection.hpp  interval.hpp  lookup_table.hpp  spatial_hash.hpp  spatial_hash_config.hpp  visibility_control.hpp
zephyr_app/src/autoware_auto_geometry/include/geometry/bounding_box/: bounding_box_common.hpp  eigenbox_2d.hpp  lfit.hpp  rotating_calipers.hpp
zephyr_app/src/autoware_auto_geometry/src/: bounding_box.cpp  spatial_hash.cpp
zephyr_app/src/autoware_cmake/: CMakeLists.txt  README.md  autoware_cmake-extras.cmake  package.xml
zephyr_app/src/autoware_cmake/cmake/: autoware_package.cmake
zephyr_app/src/controller_common/: CMakeLists.txt  package.xml
zephyr_app/src/controller_common/include/controller_common/: controller_base.hpp  visibility_control.hpp
zephyr_app/src/controller_common/src/controller_common/: controller_base.cpp
zephyr_app/src/controller_common_nodes/: CMakeLists.txt  package.xml
zephyr_app/src/controller_common_nodes/include/controller_common_nodes/: controller_base_node.hpp  endian_manip.hpp  visibility_control.hpp
zephyr_app/src/controller_common_nodes/src/controller_common_nodes/: controller_base_node.cpp
zephyr_app/src/motion_common/: CMakeLists.txt  package.xml
zephyr_app/src/motion_common/include/motion_common/: config.hpp  motion_common.hpp  trajectory_common.hpp  visibility_control.hpp
zephyr_app/src/motion_common/scripts/autogeneration_code_snippets/: kinematic_bicycle.snippet.hpp  linear_tire.snippet.hpp
zephyr_app/src/motion_common/src/motion_common/: config.cpp  motion_common.cpp  trajectory_common.cpp
zephyr_app/src/motion_model/: CMakeLists.txt  package.xml
zephyr_app/src/motion_model/include/motion_model/: differential_drive_motion_model.hpp  linear_motion_model.hpp  motion_model_interface.hpp  stationary_motion_model.hpp  visibility_control.hpp
zephyr_app/src/motion_model/src/: differential_drive_motion_model.cpp  linear_motion_model.cpp
zephyr_app/src/pure_pursuit/: CMakeLists.txt  package.xml
zephyr_app/src/pure_pursuit/include/pure_pursuit/: config.hpp  pure_pursuit.hpp  visibility_control.hpp
zephyr_app/src/pure_pursuit/src/: config.cpp  pure_pursuit.cpp
zephyr_app/src/pure_pursuit_nodes/: CMakeLists.txt  package.xml
zephyr_app/src/pure_pursuit_nodes/include/pure_pursuit_nodes/: pure_pursuit_node.hpp  visibility_control.hpp
zephyr_app/src/pure_pursuit_nodes/src/: pure_pursuit_node.cpp
zephyr_app/src/state_vector/: CMakeLists.txt  package.xml
zephyr_app/src/state_vector/include/state_vector/: common_states.hpp  common_variables.hpp  generic_state.hpp  variable.hpp  visibility_control.hpp
zephyr_app/src/state_vector/src/: common_states.cpp
zephyr_app/src/time_utils/: CMakeLists.txt  package.xml
zephyr_app/src/time_utils/include/time_utils/: stopwatch.hpp  time_utils.hpp  visibility_control.hpp
zephyr_app/src/time_utils/src/time_utils/: time_utils.cpp
(+24 files in other folders)
