# Copyright (c) 2023, Arm Limited.
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packet_analyzer"
description = "Packet Analyzer Module"
version = "1.0.0"
dependencies = [
    "numpy==1.24.1",
]

[project.scripts]
start_analyzer = "packet_analyzer.start_analyzer:main"
test_packet_analyzer = "packet_analyzer.test_packet_analyzer:main"

[tool.setuptools]
include-package-data = true
packages = [
    "analyzer_helper",
    "packet_analyzer",
    "packet_analyzer.data",
    "packet_analyzer.data.test_data"
]

[tool.setuptools.package-data]
"packet_analyzer.data" = ["*.csv"]
"packet_analyzer.data.test_data" = ["*.csv"]
