<?xml version="1.0"?>
<!--
    # Copyright (c) 2022-2024, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuation_demos</name>
  <version>2.0.0</version>
  <description>Contains launch files and configs to run different demos</description>
  <maintainer email="ambroise.vincent@arm.com">Ambroise Vincent</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>actuation_message_converter</exec_depend>
  <exec_depend>autoware_auto_perception_rviz_plugin</exec_depend>
  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>camera_description</exec_depend>
  <exec_depend>imu_description</exec_depend>
  <exec_depend>initial_pose_button_panel</exec_depend>
  <exec_depend>operation_mode_transition_manager</exec_depend>
  <exec_depend>polar_grid</exec_depend>
  <exec_depend>probabilistic_occupancy_grid_map</exec_depend>
  <exec_depend>rtc_auto_mode_manager</exec_depend>
  <exec_depend>sample_sensor_kit_description</exec_depend>
  <exec_depend>sample_sensor_kit_launch</exec_depend>
  <exec_depend>sample_vehicle_description</exec_depend>
  <exec_depend>sample_vehicle_launch</exec_depend>
  <exec_depend>tier4_autoware_api_launch</exec_depend>
  <exec_depend>tier4_datetime_rviz_plugin</exec_depend>
  <exec_depend>tier4_localization_rviz_plugin</exec_depend>
  <exec_depend>tier4_perception_rviz_plugin</exec_depend>
  <exec_depend>tier4_planning_rviz_plugin</exec_depend>
  <exec_depend>tier4_state_rviz_plugin</exec_depend>
  <exec_depend>tier4_vehicle_rviz_plugin</exec_depend>
  <exec_depend>vls_description</exec_depend>
  <exec_depend>obstacle_velocity_limiter</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>component_interface_tools</exec_depend>
  <exec_depend>mrm_comfortable_stop_operator</exec_depend>
  <exec_depend>mrm_emergency_stop_operator</exec_depend>
  <exec_depend>path_smoother</exec_depend>
  <exec_depend>control_validator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
