<?xml version="1.0"?>
<!--
    # Copyright (c) 2023-2024, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuation_format_bag</name>
  <version>2.0.0</version>
  <description>Rosbag to Actuation serialization</description>
  <maintainer email="ambroise.vincent@arm.com">Ambroise Vincent</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
