<?xml version="1.0"?>
<!--
    # Copyright (c) 2022-2024, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuation_message_converter</name>
  <version>2.0.0</version>
  <description>Convert messages between ROSIDL and IDLC</description>
  <maintainer email="ambroise.vincent@arm.com">Ambroise Vincent</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>actuation_msgs</depend>
  <depend>rt_motion_planning_hpc_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
