<?xml version="1.0"?>
<!--
    # Copyright (c) 2023-2024, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuation_player</name>
  <version>2.0.0</version>
  <description>Player component that reads pre-recorded data from file</description>
  <maintainer email="ambroise.vincent@arm.com">Ambroise Vincent</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>actuation_msgs</build_depend>
  <build_depend>autoware_cmake</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
