<?xml version="1.0"?>
<!--
    # Based on: https://github.com/autowarefoundation/autoware_common/blob/ba4d3cc3f729ebedc16aba7d745bcc54fd935e61/autoware_cmake/package.xml
    # In open-source project: autoware_common
    # Original file: Copyright (c) 2022, The Autoware Contributors
    # Modifications: Copyright (c) 2022-2023, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_cmake</name>
  <version>0.1.0</version>
  <description>CMake scripts for Autoware</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
