<?xml version="1.0"?>
<!--
    # Based on: https://gitlab.com/autowarefoundation/autoware.auto/AutowareAuto/-/blob/e3e26be1ab4b822996df60f261d031d7924f20ac/src/control/pure_pursuit/package.xml
    # In open-source project: Autoware.Auto
    # Original file: Copyright (c) 2019-2022, Apex.AI, Inc.
    # Modifications: Copyright (c) 2022-2023, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>pure_pursuit</name>
    <version>1.0.0</version>
    <description>an implementation of a pure pursuit</description>
    <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_cmake</buildtool_depend>

    <depend>controller_common</depend>
    <build_depend>autoware_auto_common</build_depend>
    <depend>motion_model</depend>
    <depend>state_vector</depend>

    <depend>actuation_msgs</depend>
    <depend>motion_common</depend>
    <depend>time_utils</depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
