<?xml version="1.0"?>
<!--
    # Based on: https://gitlab.com/autowarefoundation/autoware.auto/AutowareAuto/-/blob/e3e26be1ab4b822996df60f261d031d7924f20ac/src/common/time_utils/package.xml
    # In open-source project: Autoware.Auto
    # Original file: Copyright (c) 2019, Christopher Ho
    # Modifications: Copyright (c) 2022-2023, Arm Limited.
    # SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>time_utils</name>
  <version>1.0.0</version>
  <description>
    Simple conversion methods to/from std::chrono to simplify algorithm development
  </description>
  <maintainer email="christopherj.ho@gmail.com">Christopher Ho</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_export_depend>autoware_cmake</buildtool_export_depend>

  <depend>actuation_msgs</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
